# textraxtras

./: .cruft.json  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: index.md
search/: search_index.json
src/textraxtras/: __init__.py  textraxtras.py
tests/: test_textraxtras.py
tests/fixtures/: detect_document_text2.json  detect_document_text4.json  detect_document_text5.json  detect_document_text6.json  detect_document_text7.json  lines3.json
tests/fixtures/detect_document_text/: call1.json  call3.json  call7.json
tests/fixtures/expected_text/: lines1.json  lines2.json  lines4.json  lines5.json  lines6.json  lines7.json
